--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,9 @@ body {
   margin: 0%;
   padding: 0%;
   width: 100%; }
+  body .holder {
+    background-image: url(../img/sunday-background.png);
+    height: auto; }
   body .video-wrapper {
     width: 100%;
     height: 700px; }
@@ -12,7 +15,7 @@ body {
   body .content {
     width: 100%;
     position: absolute;
-    top: 0%; }
+    z-index: 1; }
     body .content .top-nav {
       display: flex;
       justify-content: space-between;
@@ -83,45 +86,46 @@ body {
       body .center-content .center-detail a:hover {
         background-image: url("https://framerusercontent.com/images/DzUnxO8nIp8NlFQ4Rralxbdu5jU.jpg?scale-down-to=4096"); }
   body footer {
-    position: absolute;
     background-image: url("https://framerusercontent.com/images/rX3s5jtZ4spiYfb24VBSEi1nA.jpg?scale-down-to=4096");
     padding: 35px 0px;
     background-repeat: no-repeat;
-    background-size: cover; }
-    body footer .foot {
+    background-size: cover;
+    width: 100%; }
+    body footer .foot-wrapper {
       width: 90%;
       margin: auto; }
-      body footer .foot .foot-one {
-        padding: 0%; }
-        body footer .foot .foot-one .logo-info .foot-logo {
-          width: 60px;
-          margin-left: 20px; }
-        body footer .foot .foot-one .logo-info ul {
+      body footer .foot-wrapper .logo-info {
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        body footer .foot-wrapper .logo-info .foot-logo {
+          width: 60px; }
+        body footer .foot-wrapper .logo-info ul {
           list-style-type: none;
-          margin-left: 20px;
+          margin: 0px;
           padding: 0%; }
-          body footer .foot .foot-one .logo-info ul li {
+          body footer .foot-wrapper .logo-info ul li {
             margin: 10px 0px; }
-            body footer .foot .foot-one .logo-info ul li .org-name {
+            body footer .foot-wrapper .logo-info ul li .org-name {
               width: 255px; }
-            body footer .foot .foot-one .logo-info ul li h4 {
+            body footer .foot-wrapper .logo-info ul li h4 {
               font-family: Montserrat, sans-serif;
               line-height: 2;
               color: white;
               font-size: 14px;
               font-weight: 600;
               margin: 0px; }
-      body footer .foot .foot-two {
-        padding: 0%; }
-        body footer .foot .foot-two .foot-menu {
+      body footer .foot-wrapper .footer-links {
+        display: flex;
+        justify-content: right;
+        align-items: center; }
+        body footer .foot-wrapper .footer-links .foot-menu {
           list-style-type: none;
-          margin-top: 140px;
-          padding: 0%;
-          text-align: right; }
-          body footer .foot .foot-two .foot-menu li {
+          padding: 0%; }
+          body footer .foot-wrapper .footer-links .foot-menu li {
             display: inline;
             padding: 0px 8px; }
-            body footer .foot .foot-two .foot-menu li a {
+            body footer .foot-wrapper .footer-links .foot-menu li a {
               font-family: Montserrat, sans-serif;
               font-weight: 600;
               font-size: 14px;
@@ -154,6 +158,8 @@ body {
     background-color: none !important; }
 
 @media (max-width: 1025px) {
+  body .content .top-nav .right li a {
+    padding: 10px; }
   body .center-content .center-detail {
     margin: 80px auto 20px; }
     body .center-content .center-detail h2 {
@@ -166,66 +172,9 @@ body {
       margin-bottom: 35px; }
     body .center-content .center-detail a {
       font-size: 18px;
-      padding: 13px 33px; }
-  body footer {
-    padding: 30px 0px; }
-    body footer .row .foot-one .logo-info ul {
-      margin-left: 20px;
-      padding: 0%; }
-      body footer .row .foot-one .logo-info ul li {
-        margin: 10px 0px; }
-        body footer .row .foot-one .logo-info ul li .org-name {
-          width: 255px; }
-    body footer .row .foot-two .foot-menu {
-      margin-top: 140px; }
-      body footer .row .foot-two .foot-menu li a {
-        font-size: 14px; } }
+      padding: 13px 33px; } }
 
-@media (max-width: 768px) {
-  body .content .top-nav .right {
-    font-size: 15px; }
-    body .content .top-nav .right a {
-      padding: 0px 10px;
-      font-size: 15px; } }
-
-@media (max-width: 768px) {
-  body .content .top-nav .right a {
-    padding: 0px 10px;
-    font-size: 13px; }
-  body .center-content .center-detail {
-    margin: 60px auto 20px; }
-    body .center-content .center-detail h2 {
-      font-size: 36px;
-      padding: 13px 0px; }
-    body .center-content .center-detail p {
-      font-size: 14px;
-      margin-bottom: 0px;
-      height: 130px; }
-    body .center-content .center-detail a {
-      font-size: 15px;
-      padding: 10px 25px; }
-  body footer .foot .foot-one {
-    width: 60%; }
-    body footer .foot .foot-one .logo-info {
-      margin-left: 40px; }
-      body footer .foot .foot-one .logo-info ul {
-        margin-left: 20px;
-        padding: 0%; }
-        body footer .foot .foot-one .logo-info ul li {
-          margin: 10px 0px; }
-          body footer .foot .foot-one .logo-info ul li .org-name {
-            width: 255px; }
-  body footer .foot .foot-two {
-    width: 30%; }
-    body footer .foot .foot-two .foot-menu {
-      margin-top: 20px; }
-      body footer .foot .foot-two .foot-menu li {
-        text-align: left; }
-        body footer .foot .foot-two .foot-menu li a {
-          display: block;
-          font-size: 14px; } }
-
-@media (max-width: 736px) {
+@media (max-width: 769px) {
   body .center-content .center-detail h2 {
     font-size: 35px;
     padding: 13px 0px; }
@@ -234,9 +183,18 @@ body {
     margin-bottom: 20px; }
   body .center-content .center-detail a {
     font-size: 14px;
-    padding: 10px 25px; } }
+    padding: 10px 25px; }
+  body .footer .foot-wrapper .footer-links {
+    justify-content: center; }
+    body .footer .foot-wrapper .footer-links .foot-menu {
+      list-style-type: none;
+      padding: 0%; }
+      body .footer .foot-wrapper .footer-links .foot-menu li {
+        display: block;
+        padding: 10px 8px;
+        text-align: center; } }
 
-@media (max-width: 685px) {
+@media (max-width: 736px) {
   body .content .top-nav .right {
     position: relative; }
     body .content .top-nav .right a {
@@ -287,7 +245,11 @@ body {
     margin-bottom: 20px; }
   body .center-content .center-detail a {
     font-size: 14px;
-    padding: 10px 25px; } }
+    padding: 10px 25px; }
+  body .footer .foot-wrapper .foot-details {
+    width: 100%; }
+  body .footer .foot-wrapper .footer-links {
+    width: 100%; } }
 
 @media (max-width: 425px) {
   body .content .top-nav .left {
@@ -315,29 +277,7 @@ body {
     body .center-content .center-detail a {
       font-size: 12px;
       padding: 8px 15px;
-      margin-left: 20px; }
-  body footer {
-    padding: 30px 0px; }
-    body footer .foot .foot-one {
-      width: 100%; }
-      body footer .foot .foot-one .logo-info {
-        margin-left: 55px; }
-        body footer .foot .foot-one .logo-info ul {
-          margin-left: 20px;
-          padding: 0%; }
-          body footer .foot .foot-one .logo-info ul li {
-            margin: 10px 0px; }
-            body footer .foot .foot-one .logo-info ul li .org-name {
-              width: 255px; }
-    body footer .foot .foot-two {
-      width: 100%; }
-      body footer .foot .foot-two .foot-menu {
-        margin-top: 0px; }
-        body footer .foot .foot-two .foot-menu li {
-          text-align: center; }
-          body footer .foot .foot-two .foot-menu li a {
-            display: block;
-            font-size: 14px; } }
+      margin-left: 20px; } }
 
 @media (max-width: 414px) {
   body .content .top-nav .left {
@@ -361,37 +301,11 @@ body {
     body .center-content .center-detail a {
       font-size: 12px;
       padding: 8px 15px;
-      margin-left: 20px; }
-  body footer {
-    padding: 30px 0px; }
-    body footer .foot .foot-one {
-      width: 100%; }
-      body footer .foot .foot-one .logo-info {
-        margin-left: 55px; }
-        body footer .foot .foot-one .logo-info ul {
-          margin-left: 20px;
-          padding: 0%; }
-          body footer .foot .foot-one .logo-info ul li {
-            margin: 10px 0px; }
-            body footer .foot .foot-one .logo-info ul li .org-name {
-              width: 255px; }
-    body footer .foot .foot-two {
-      width: 100%; }
-      body footer .foot .foot-two .foot-menu {
-        margin-top: 0px; }
-        body footer .foot .foot-two .foot-menu li {
-          text-align: center; }
-          body footer .foot .foot-two .foot-menu li a {
-            display: block;
-            font-size: 14px; } }
+      margin-left: 20px; } }
 
 @media (max-width: 375px) {
   body .center-content .center-detail {
     margin: 45px auto 20px; }
     body .center-content .center-detail p {
       height: 130px;
-      margin-bottom: 10px; }
-  body footer .foot .foot-one {
-    width: 100%; }
-    body footer .foot .foot-one .logo-info {
-      margin-left: 10px; } }
+      margin-bottom: 10px; } }
