--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,7 +15,7 @@ body{
 
     .video-wrapper{
         width: 100%;
-        height: 700px;
+        height: auto;
 
         .my-video{
             width: 1265px;
@@ -262,50 +262,16 @@ body{
                 }
             }
         }   
-    }
-}
-
-@media (max-width:769px){
-    body{ 
-        .center-content{
-            .center-detail{
-                
-                h2{
-                    font-size: 35px;
-                    padding: 13px 0px;
-                }
-                p{
-                    font-size: 14px;
-                    margin-bottom: 20px;
-                }
-                a{
-                    font-size: 14px;
-                    padding: 10px 25px;
-                }
-            }
-        } 
         .footer{
             .foot-wrapper{
-                .footer-links{
-                    justify-content: center;
-        
-                    .foot-menu{
-                        list-style-type: none;
-                        padding: 0%;
-                        li{
-                            display: block;
-                            padding: 10px 8px;
-                            text-align: center;
-                        }
-                    }
-                } 
+                width: 95%;
             }
-        } 
+        }
     }
 }
 
-@media (max-width:736px){
-    body{
+@media (max-width:800px){
+    body{ 
         .content{
             .top-nav {
                 .right{
@@ -370,6 +336,46 @@ body{
                 }
             }    
         } 
+        .center-content{
+            .center-detail{
+                
+                h2{
+                    font-size: 35px;
+                    padding: 13px 0px;
+                }
+                p{
+                    font-size: 14px;
+                    margin-bottom: 20px;
+                }
+                a{
+                    font-size: 14px;
+                    padding: 10px 25px;
+                }
+            }
+        } 
+        .footer{
+            .foot-wrapper{
+                .footer-links{
+                    justify-content: center;
+        
+                    .foot-menu{
+                        list-style-type: none;
+                        padding: 0%;
+                        li{
+                            display: block;
+                            padding: 10px 8px;
+                            text-align: center;
+                        }
+                    }
+                } 
+            }
+        } 
+    }
+}
+
+@media (max-width:736px){
+    body{
+        
         .center-content{
             .center-detail{
                 h2{
