--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -269,17 +269,6 @@ body{
 
                 .filter-item{
                     width: 50%;
-
-                   ul{
-
-                    li{
-                        padding: 10px 0px;
-
-                        label{
-                            font-size: 20px;
-                        }
-                    }
-                   }
                 }
             }
 
@@ -318,6 +307,7 @@ body{
         }
     }
 }
+
 
 @media (max-width:768px){
     body{
@@ -409,6 +399,9 @@ body{
         }
     }
 }
+@media (max-width:480px){
+
+}
 
 @media (max-width:685px){
     body{
@@ -417,11 +410,42 @@ body{
             h1{
                 font-size: 35px;
             }
+
+            .left-div{
+                .search-center-bar{
+                    .search-bar{
+                        width: 300px;
+                    }
+                }
+            }
+            .align-right-col{
+                .task-list{
+                    .task-title{
+                        display: block;
+
+                        h5{
+                            border: none;
+                        }
+                        
+                        p{
+                            padding: 5px 0px;
+                        }
+
+                        .pgm-detail-sec{
+                            width: 100%;
+                        }
+                        .icon-sec{
+                            width: 100% !important;
+                        }
+
+                    }
+                }
+            }
         }
     }
 }
 
-@media (max-width:425px){
+@media (max-width:667px){
     body{
 
         .sermon-div{
@@ -459,7 +483,6 @@ body{
             }
             .align-right-col{
                 .task-list{
-
                     .task-title{
                         display: block;
 
@@ -470,6 +493,14 @@ body{
                         p{
                             padding: 5px 0px;
                         }
+                        .pgm-detail-sec{
+                            width: 100%;
+                        }
+
+                        .icon-sec{
+                            width: 100%;
+                        }
+
                     }
                 }
             }
