--- a/styles/index.css
+++ b/styles/index.css
@@ -94,6 +94,8 @@ body {
     body footer .foot-wrapper {
       width: 90%;
       margin: auto; }
+      body footer .foot-wrapper .bottom-sec {
+        width: 100%; }
       body footer .foot-wrapper .logo-info {
         display: flex;
         justify-content: center;
@@ -244,7 +246,8 @@ body {
     padding: 13px 0px; }
   body .center-content .center-detail p {
     font-size: 14px;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    height: 150px; }
   body .center-content .center-detail a {
     font-size: 14px;
     padding: 10px 25px; }
