--- a/styles/index.css
+++ b/styles/index.css
@@ -4,10 +4,12 @@ body {
   width: 100%; }
   body .holder {
     background-image: url(../img/sunday-background.png);
-    height: auto; }
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh; }
   body .video-wrapper {
     width: 100%;
-    height: auto; }
+    min-height: 550px; }
     body .video-wrapper .my-video {
       width: 1265px;
       background-size: cover;
@@ -159,6 +161,10 @@ body {
   body .page-item:hover {
     background-color: none !important; }
 
+@media (max-width: 1440px) {
+  body .video-wrapper .my-video {
+    width: 1440px; } }
+
 @media (max-width: 1025px) {
   body .content .top-nav .right li a {
     padding: 10px; }
@@ -176,7 +182,12 @@ body {
       font-size: 18px;
       padding: 13px 33px; }
   body .footer .foot-wrapper {
-    width: 95%; } }
+    width: 100%; }
+    body .footer .foot-wrapper .foot-details {
+      width: 40%;
+      padding-left: 20px; }
+    body .footer .foot-wrapper .footer-links {
+      width: 60%; } }
 
 @media (max-width: 800px) {
   body .content .top-nav .right {
@@ -230,7 +241,11 @@ body {
   body .center-content .center-detail a {
     font-size: 14px;
     padding: 10px 25px; }
+  body .footer .foot-wrapper .foot-details {
+    width: 45%;
+    margin-left: 30px; }
   body .footer .foot-wrapper .footer-links {
+    width: 50%;
     justify-content: center; }
     body .footer .foot-wrapper .footer-links .foot-menu {
       list-style-type: none;
