--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,12 +10,15 @@ body{
 
     .holder{
         background-image: url(../img/sunday-background.png);
-        height: auto;
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 100vh;
+
     }
 
     .video-wrapper{
         width: 100%;
-        height: auto;
+        min-height: 550px;
 
         .my-video{
             width: 1265px;
@@ -129,7 +132,8 @@ body{
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
-
+        
+        
         .foot-wrapper{
             width: 90%;
             margin: auto;
@@ -233,6 +237,16 @@ body{
         background-color: none !important;
     }
 }
+@media (max-width:1440px){
+    body{
+        .video-wrapper{
+            .my-video{
+                width: 1440px;
+            }
+        }
+    }
+
+}
 
 @media (max-width:1025px){
     body{
@@ -268,7 +282,16 @@ body{
         }   
         .footer{
             .foot-wrapper{
-                width: 95%;
+                width: 100%;
+
+                .foot-details{
+                    width: 40%;
+                    padding-left:20px ;
+                }
+
+                .footer-links{
+                    width: 60%;
+                }
             }
         }
     }
@@ -359,7 +382,13 @@ body{
         } 
         .footer{
             .foot-wrapper{
+                .foot-details{
+                    width: 45%;
+                    margin-left: 30px;
+                }
+
                 .footer-links{
+                    width: 50%;
                     justify-content: center;
         
                     .foot-menu{
@@ -372,6 +401,7 @@ body{
                         }
                     }
                 } 
+
             }
         } 
     }
