--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,8 +21,11 @@ body{
         min-height: 550px;
 
         .my-video{
-            width: 1265px;
-            background-size: cover;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             position: relative;
         }
     }
@@ -237,19 +240,14 @@ body{
         background-color: none !important;
     }
 }
-@media (max-width:1440px){
-    body{
-        .video-wrapper{
-            .my-video{
-                width: 1440px;
-            }
-        }
-    }
-
-}
 
 @media (max-width:1025px){
     body{
+        .video-wrapper{
+            .my-video{
+                height: 700px;
+            }
+        }
         .content{
             .top-nav{
                 .right{
@@ -263,7 +261,7 @@ body{
         }
         .center-content{
             .center-detail{
-                margin:80px auto 20px;
+                margin:120px auto 20px;
                 h2{
                     font-size: 40px;
                     font-weight: 500;
@@ -299,6 +297,12 @@ body{
 
 @media (max-width:800px){
     body{ 
+        .video-wrapper{
+            .my-video{
+                height: 950px;
+            }
+        }
+
         .content{
             .top-nav {
                 .right{
@@ -365,18 +369,9 @@ body{
         } 
         .center-content{
             .center-detail{
-                
-                h2{
-                    font-size: 35px;
-                    padding: 13px 0px;
-                }
+                margin:160px auto 20px;
                 p{
-                    font-size: 14px;
-                    margin-bottom: 20px;
-                }
-                a{
-                    font-size: 14px;
-                    padding: 10px 25px;
+                    height: 150px;
                 }
             }
         } 
@@ -407,23 +402,30 @@ body{
     }
 }
 
-@media (max-width:736px){
+
+
+@media (max-width:610px){
     body{
-        
         .center-content{
             .center-detail{
                 h2{
-                    font-size: 30px;
-                    padding: 13px 0px;
+                    width: 90%;
+                    font-size: 34px;
                 }
                 p{
-                    font-size: 14px;
-                    margin-bottom: 20px;
-                    height: 150px;
+                    width: 80%;
+                }
+            }
+        }
+
+        .center-content{
+            .center-detail{
+                p{
+                    height: 170px;
                 }
                 a{
-                    font-size: 14px;
-                    padding: 10px 25px;
+                    padding: 15px 25px;
+                    font-size: 15px;
                 }
             }
         }
@@ -431,6 +433,7 @@ body{
             .foot-wrapper{
                 .foot-details{
                     width: 100%;
+                    margin-left: 0%;
                 }
                 .footer-links{
                     width: 100%;
@@ -440,63 +443,15 @@ body{
     }
 }
 
-@media (max-width:425px){
+
+@media (max-width:450px){
     body{
-        .content{
-            .top-nav {
-                .left{
-                    padding: 20px;
-
-                    img{
-                        width: 70px;
-                    }
-                }
-    
-                .right{
-                    a{
-                        display: none;
-                    }
-
-                    .hamburger-icon {
-                        display: block;
-                        margin:0px 10px;
-
-                        i{
-                            font-size: 20px;
-                        }
-                    }
-                }
-            }    
+        .video-wrapper{
+            .my-video{
+                height: 750px;
+            }
         }
 
-        .center-content{
-            .center-detail{
-                margin:50px auto 20px;
-                h2{
-                    margin-left: 20px;
-                    font-size: 20px;
-                    padding: 10px 0px;
-                }
-                p{
-                    margin-left: 20px;
-                    font-size: 12px;
-                    margin-bottom: 0px;
-                    width: 80%;
-                }
-                a{
-                    font-size: 12px;
-                    padding: 8px 15px;
-                    margin-left: 20px;
-                }
-            }
-        } 
-       
-        
-    }
-}
-
-@media (max-width:414px){
-    body{
         .content{
             .top-nav {
                 .left{
@@ -520,18 +475,18 @@ body{
                 margin:100px auto 20px;
                 h2{
                     margin-left: 20px;
-                    font-size: 20px;
+                    font-size: 25px;
                     padding: 10px 0px;
                 }
                 p{
                     margin-left: 20px;
-                    font-size: 12px;
+                    font-size: 14px;
                     margin-bottom: 0px;
                     width: 80%;
-                    height: 130px;
+                    height: 170px;
                 }
                 a{
-                    font-size: 12px;
+                    font-size: 14px;
                     padding: 8px 15px;
                     margin-left: 20px;
                 }
@@ -542,12 +497,28 @@ body{
 
 @media (max-width:375px){
     body{
+        .video-wrapper{
+            .my-video{
+                height: 800px;
+            }
+        }
         .center-content{
             .center-detail{
-                margin:45px auto 20px;
                 p{
-                    height: 130px;
-                    margin-bottom: 10px;
+                    height: 180px;
+                }
+                
+            }
+        }
+    }
+}
+
+@media (max-width:320px){
+    body{
+        .center-content{
+            .center-detail{
+                p{
+                    height: 220px;
                 }
                 
             }
