--- a/styles/sermon.css
+++ b/styles/sermon.css
@@ -234,10 +234,13 @@ body .sermon-div {
     font-size: 35px; }
   body .sermon-div .left-div .search-center-bar .search-bar {
     width: 300px; }
+  body .sermon-div .align-right-col p {
+    font-size: 16px; }
   body .sermon-div .align-right-col .task-list .task-title {
     display: block; }
     body .sermon-div .align-right-col .task-list .task-title h5 {
-      border: none; }
+      border: none;
+      min-width: 100%; }
     body .sermon-div .align-right-col .task-list .task-title p {
       padding: 5px 0px; }
     body .sermon-div .align-right-col .task-list .task-title .pgm-detail-sec {
