--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -312,7 +312,6 @@ body{
 @media (max-width:768px){
     body{
         .sermon-div{
-
             h1{
                 font-size: 40px;
             }
@@ -398,9 +397,7 @@ body{
         }
     }
 }
-@media (max-width:480px){
 
-}
 
 @media (max-width:685px){
     body{
@@ -418,12 +415,16 @@ body{
                 }
             }
             .align-right-col{
+                p{
+                    font-size: 16px;
+                }
                 .task-list{
                     .task-title{
                         display: block;
 
                         h5{
                             border: none;
+                            min-width: 100%;
                         }
                         
                         p{
