--- a/styles/index.scss
+++ b/styles/index.scss
@@ -130,12 +130,11 @@ body{
     }
 
     footer{
-        background-image: url('https://framerusercontent.com/images/rX3s5jtZ4spiYfb24VBSEi1nA.jpg?scale-down-to=4096');
+        background-image: url('../img/footer.png');
         padding: 35px 0px;
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
-        
         
         .foot-wrapper{
             width: 90%;
@@ -153,16 +152,18 @@ body{
                 .foot-logo{
                     width: 60px;
                 }
+                .org-name{
+                    width: 255px;
+                    height: 40px;
+                }
                 ul{
                     list-style-type: none;
                     margin: 0px;
-                    padding: 0%;
+                    padding-left: 65px;
                     li{
                         margin: 10px 0px;
         
-                        .org-name{
-                            width: 255px;
-                        }
+                    
         
                         h4{
                             font-family: $fontMonstserrat;
