--- a/styles/index.scss
+++ b/styles/index.scss
@@ -379,12 +379,12 @@ body{
         .footer{
             .foot-wrapper{
                 .foot-details{
-                    width: 45%;
+                    width: 50%;
                     margin-left: 30px;
                 }
 
                 .footer-links{
-                    width: 50%;
+                    width: 45%;
                     justify-content: center;
         
                     .foot-menu{
@@ -402,7 +402,6 @@ body{
         } 
     }
 }
-
 
 
 @media (max-width:610px){
@@ -509,6 +508,19 @@ body{
                     height: 180px;
                 }
                 
+            }
+        }
+        .footer{
+            .foot-wrapper{
+                .logo-info{
+                    .foot-logo{
+
+                    }
+                    .org-name{
+                        width: 180px;
+                        height: 40px;
+                    }
+                }
             }
         }
     }
