Header and footer section background color changes and home screen body content changing  alignments

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,6 +2,7 @@ $fontMonstserrat : Montserrat, sans-serif;
 $fontInter : inter, sans-serif;
 $fontManrope : manrope, sans-serif;
 $fontOpenSans : open-sans, sans-serif;
+$headFootColor : #0A2B56;
 
 body{
     margin: 0%;
@@ -31,9 +32,11 @@ body{
     }
     
     .content{
+        background-color: $headFootColor;
         width: 100%;
         position: absolute;
         z-index: 1;
+        
         .top-nav {
             display: flex;
             justify-content: space-between;
@@ -44,6 +47,11 @@ body{
 
                 img{
                     width: 78px;
+                }
+
+                .org-name{
+                    width: 180px;
+                    height: 40px;
                 }
             }
 
@@ -84,7 +92,7 @@ body{
     }
 
     .center-content{
-        top: 90px;
+        top: 20%;
         width: 100%;
         position: absolute;
 
@@ -130,11 +138,9 @@ body{
     }
 
     footer{
-        background-image: url('../img/footer.png');
         padding: 35px 0px;
-        background-repeat: no-repeat;
-        background-size: cover;
         width: 100%;
+        background-color: $headFootColor;
         
         .foot-wrapper{
             width: 90%;
@@ -458,7 +464,12 @@ body{
                     padding: 20px;
 
                     img{
-                        width: 70px;
+                        width: 50px;
+                    }
+
+                    .org-name{
+                        width: 140px;
+                        height: 20px;
                     }
                 }
     
@@ -531,6 +542,19 @@ body{
                     height: 220px;
                 }
                 
+            }
+        }
+        .content{
+            .top-nav {
+                .left{
+                    img{
+                        width: 50px;
+                    }
+                    .org-name{
+                        width: 100px;
+                        height: 20px;
+                    }
+                }
             }
         }
     }
