--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -5,16 +5,16 @@ $fontOpenSans : open-sans, sans-serif;
 
 body{
 
-    .content{
-        position: static;
-        .top-nav {
-            .right{
-                a {
-                    color: #000000;
-                }
-            }
-        }
-    }
+    // .content{
+    //     position: static;
+    //     .top-nav {
+    //         .right{
+    //             a {
+    //                 color: #000000;
+    //             }
+    //         }
+    //     }
+    // }
 
     .sermon-div{
         min-height: 550px;
