--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,7 @@ body {
       object-fit: cover;
       position: relative; }
   body .content {
+    background-color: #0A2B56;
     width: 100%;
     position: absolute;
     z-index: 1; }
@@ -29,6 +30,9 @@ body {
         padding: 30px; }
         body .content .top-nav .left img {
           width: 78px; }
+        body .content .top-nav .left .org-name {
+          width: 180px;
+          height: 40px; }
       body .content .top-nav .right {
         font-size: 20px;
         list-style-type: none;
@@ -54,7 +58,7 @@ body {
       body .content .top-nav .right .active {
         text-decoration: underline; }
   body .center-content {
-    top: 90px;
+    top: 20%;
     width: 100%;
     position: absolute; }
     body .center-content .center-detail {
@@ -91,11 +95,9 @@ body {
       body .center-content .center-detail a:hover {
         background-image: url("https://framerusercontent.com/images/DzUnxO8nIp8NlFQ4Rralxbdu5jU.jpg?scale-down-to=4096"); }
   body footer {
-    background-image: url("../img/footer.png");
     padding: 35px 0px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%; }
+    width: 100%;
+    background-color: #0A2B56; }
     body footer .foot-wrapper {
       width: 90%;
       margin: auto; }
@@ -277,7 +279,10 @@ body {
   body .content .top-nav .left {
     padding: 20px; }
     body .content .top-nav .left img {
-      width: 70px; }
+      width: 50px; }
+    body .content .top-nav .left .org-name {
+      width: 140px;
+      height: 20px; }
   body .content .top-nav .right a {
     display: none; }
   body .center-content .center-detail {
@@ -308,4 +313,9 @@ body {
 
 @media (max-width: 320px) {
   body .center-content .center-detail p {
-    height: 220px; } }
+    height: 220px; }
+  body .content .top-nav .left img {
+    width: 50px; }
+  body .content .top-nav .left .org-name {
+    width: 100px;
+    height: 20px; } }
