--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -5,18 +5,12 @@ $fontOpenSans : open-sans, sans-serif;
 
 body{
 
-    // .content{
-    //     position: static;
-    //     .top-nav {
-    //         .right{
-    //             a {
-    //                 color: #000000;
-    //             }
-    //         }
-    //     }
-    // }
+    .content{
+        position: static;
+    }
 
     .sermon-div{
+        padding-top: 144px;
         min-height: 550px;
 
         h1{
